--- a/templates/commit.template
+++ b/templates/commit.template
@@ -14,7 +14,7 @@
 # Note: "Fixes" is the only place where is not followed by ":", because
 # we want to use a trigger from github to close the issue automatically.
 # 
-# MFM stands for MERGE FROM MASTER, and the minimun time is 14 days.
+# MFM stands for MERGE FROM MASTER, and the minimum time is 14 days.
 #
 # Relnotes means if it is set, your changes will be included in the next changelog.
 #
